Add package/app to flake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ find_package(SDL2 REQUIRED)
 add_executable(boids main.c)
 include_directories(${SDL2_INCLUDE_DIR})
 target_link_libraries(boids ${SDL2_LIBRARY})
+message("SDL2_INCLUDE_DIR: ${SDL2_INCLUDE_DIR}")
+message("SDL2_LIBRARY: ${SDL2_LIBRARY}")
+install(TARGETS boids RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
